--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -3,7 +3,10 @@
 
 This package is currently under heavly construction.
 
-# Installation
+## Installation
+
+#### Developer version:
+
 ```{r}
 devtools::install_github("schalkdaniel/compboost")
 ```
