--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -9,4 +9,6 @@ This package is currently under heavly construction.
 
 ```{r}
 devtools::install_github("schalkdaniel/compboost")
+```r
+devtools::install_github("chkue/Sarim")
 ```
